fix: change grid columns to deal with single champion overflow

--- a/src/app/components/champions/champions.component.scss
+++ b/src/app/components/champions/champions.component.scss
@@ -2,7 +2,7 @@
 
 .container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(3, minmax(400px, 1fr));
   gap: 1rem;
   padding: 1rem;
 }
@@ -40,9 +40,15 @@ h1 {
   }
 }
 
-@media only screen and (max-width: 570px) {
+@media only screen and (max-width: 1330px) {
   .container {
-    grid-template-columns: minmax(300px, 1fr);
+    grid-template-columns: repeat(2, minmax(350px, 1fr));
+  }
+}
+
+@media only screen and (max-width: 840px) {
+  .container {
+    grid-template-columns: 1fr;
     padding: 0;
   }
 }
