--- a/src/app/components/champions/single-champion/single-champion.component.scss
+++ b/src/app/components/champions/single-champion/single-champion.component.scss
@@ -63,8 +63,15 @@ article {
   background-color: $dark-blue;
   padding: 15px 10px;
   p {
-    height: 100px;
+    min-height: 100px;
     color: white;
     font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .tags {
+    flex-direction: column;
+    text-align: center;
   }
 }
